versions/5.2.3/source/index.rst
.. This page should present an overview of the whole documentation, with a TOC
   as well as a main table that lists the most important stuff about the project

SuperAwesome iOS SDK
====================

The SuperAwesome iOS SDK (Software Development Kit) lets you to easily add COPPA compliant advertisements to your apps.

=========== ========
Info        Contents
=========== ========
Version     <sdk_version>
Support 		<sdk_min>
GitHub      <sdk_source>
Contact     `<sdk_devsuspport> <mailto:<sdk_devsuspport>>`_
License     `LICENSE <https://raw.githubusercontent.com/SuperAwesomeLTD/sa-mobile-sdk-ios/master/LICENSE>`_
=========== ========

Table of Contents:

.. toctree::
   :maxdepth: 2

   Initial setup <01dashboard>
   Add the SDK through CocoaPods <02addcocoa>
   Add the SDK as a framework <03addframe>
   Add the SDK as a static library <04addstatic>
   Banner Ads <05banner>
   Interstitial Ads <06interstitial>
   Video Ads <07video>
	 Game Wall <08gamewall>
   Ad callbacks <09callbacks>
   Handle CPI <10cpi>
   Integrate with MoPub <11mopub>
   Examples <12examples>
