versions/5.4.2/source/index.rst
.. This page should present an overview of the whole documentation, with a TOC
   as well as a main table that lists the most important stuff about the project

AwesomeAds iOS SDK
==================

The AwesomeAds iOS SDK (Software Development Kit) lets you to easily add COPPA compliant advertisements to your apps.

=========== ========
Info        Contents
=========== ========
Version     <sdk_version> (`Changelog <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-ios/blob/master/CHANGELOG.md>`_)
Support 		<sdk_min>
GitHub      <sdk_source>
Contact     `<sdk_devsuspport> <mailto:<sdk_devsuspport>>`_
License     `GNU Lesser General Public License Version 3 <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-ios/blob/master/LICENSE>`_
=========== ========

AwesomeAds Demo App
-------------------

Check out the new AwesomeAds Demo App, now available on iTunes.
It lets you preview and troubleshoot all mobile ads on the AwesomeAds platform, on the go!

+-----------------------------+-----------------------------+-----------------------------+-----------------------------+
| .. image:: img/appscr1.jpeg | .. image:: img/appscr2.jpeg | .. image:: img/appscr3.jpeg | .. image:: img/appscr4.jpeg |
|   :width: 100px             |   :width: 100px             |   :width: 100px             |   :width: 100px             |
|   :height: 178px            |   :height: 178px            |   :height: 178px            |   :height: 178px            |
+-----------------------------+-----------------------------+-----------------------------+-----------------------------+

.. image:: img/appstore.png
  :target: https://itunes.apple.com/gb/app/superawesome-ads/id1188682100?mt=8

Table of Contents
-----------------

.. toctree::
   :maxdepth: 2

   Initial setup <01dashboard>
   Add the SDK through CocoaPods <02addcocoa>
   Add the SDK as a framework <03addframe>
   Add the SDK as a static library <04addstatic>
   Banner Ads <05banner>
   Interstitial Ads <06interstitial>
   Video Ads <07video>
   App Wall <08appwall>
   Ad callbacks <09callbacks>
   Handle CPI <10cpi>
   Integrate with MoPub <11mopub>
   Examples <12examples>
